--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-scripts": "5.0.1",
+    "react-router-dom": "^7.0.1",
+    "react-scripts": "^5.0.1",
+    "sass": "^1.81.0",
+    "sass-loader": "^16.0.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
