--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-scripts": "^5.0.1",
     "sass": "^1.81.0",
     "sass-loader": "^16.0.3",
+    "swiper": "^11.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
